--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "pg-triggers": "^0.3.3"
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.2.0",
+    "guarantee-type": "^0.1.2",
+    "mixin-patch": "^0.4.1",
+    "mocha": "^10.7.3",
     "typescript": "^5.5.4",
-    "types.d.ts": "^0.6.21",
-    "mixin-patch": "^0.4.1"
+    "types.d.ts": "^0.6.21"
   },
   "mixin-patch": {},
   "scripts": {
@@ -29,7 +32,7 @@
     "watch:buildC": "tsc -p tsconfig-client.json --watch",
     "watch:buildS": "tsc -p tsconfig-server.json --watch",
     "watch:buildU": "tsc -p tsconfig-unlogged.json --watch",
-    "test": "mocha --reporter spec --bail --check-leaks test/",
+    "test": "tsc -p tsconfig-test.json && mocha --reporter spec --bail --check-leaks dist/test/test/",
     "dump": "npm start -- --dump-db",
     "dumpb": "(tsc -p tsconfig-server.json  || echo \"continue w/error\") && npm run dump",
     "start": "node dist/server/server-principal.js"
