--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.0",
-    "guarantee-type": "^0.1.4",
+    "guarantee-type": "^0.2.0-rc.1",
     "mixin-patch": "^0.4.1",
     "mocha": "^10.7.3",
     "typescript": "^5.5.4",
