--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "dist",
     "install"
   ],
+  "engines" : { 
+    "node" : ">=20.15",
+    "npm" : ">=10.7"
+  },  
   "dependencies": {
     "backend-plus": "^2.0.0-rc.28",
     "frontend-plus": "^0.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "pg-triggers": "^0.3.3"
   },
   "devDependencies": {
