--- a/example-local-config.yaml
+++ b/example-local-config.yaml
@@ -11,13 +11,15 @@ db:
   password: cambiar_esta_clave
 install:
   dump:
-    drop-his: false
+    drop-his: false # poner en true en desarrollo
     db:
       owner: siper_owner
 client-setup: 
   lang: es
-devel:
-  delay: 0
+x-devel: # no incluir en producción. En desarrollo quitar la x-
+  delay: 500
+  tests-can-delete-db: true
+  useFileDevelopment: true
 log:
   db:
     on-demand: true
