--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -15,15 +15,16 @@
     "npm" : ">=10.7"
   },  
   "dependencies": {
-    "backend-plus": "^2.0.0-rc.28",
-    "frontend-plus": "^0.0.3",
+    "backend-plus": "^2.0.0-rc.29",
+    "frontend-plus": "^0.0.4",
+    "like-ar": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "pg-triggers": "^0.3.3"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.7",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.2",
     "guarantee-type": "^0.2.0-rc.1",
     "mixin-patch": "^0.4.1",
     "mocha": "^10.7.3",
