--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.4",
     "guarantee-type": "^0.2.0-rc.1",
+    "json4all": "^1.4.0",
     "mixin-patch": "^0.4.1",
     "mocha": "^10.7.3",
     "typescript": "^5.5.4",
