Agrego novedades horarias y uso time para las horas.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -15,7 +15,7 @@
     "npm" : ">=10.7"
   },  
   "dependencies": {
-    "backend-plus": "^2.0.0-rc.31",
+    "backend-plus": "^2.0.1",
     "frontend-plus": "^0.0.5",
     "like-ar": "^0.5.1",
     "react": "^18.3.1",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.8",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.7.4",
     "guarantee-type": "^0.2.0-rc.1",
     "json4all": "^1.4.0",
     "mixin-patch": "^0.4.1",
