Agrego el primer comonente: Calendario. Corrijo el calendario que se mostraba mal.

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -4,7 +4,9 @@
         "typeRoots" : ["node_modules/@types", "../../node_modules/types.d.ts/modules"],
         "lib": ["dom", "ES2023"],
         "module": "UMD",
-        "jsx": "react"
+        "jsx": "react",
+        "strict": true,
+        "noImplicitAny": true,
     },
     "include":[
         "."
