--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm" : ">=10.7"
   },  
   "dependencies": {
-    "backend-plus": "^2.0.6",
+    "backend-plus": "^2.0.8",
     "frontend-plus": "^0.0.9",
     "guarantee-type": "^0.2.0-rc.1",
     "json4all": "^1.4.0",
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "mixin-patch": "^0.4.1",
     "mocha": "^10.8.2",
     "typescript": "^5.6.3",
