--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -4,7 +4,12 @@
         "module": "none",
         "target": "es2018",
         "lib":["es2017", "es2015", "es2018"],
-        "baseUrl": ""
+        "baseUrl": "",
+        "strict": true,
+        "noImplicitAny": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true
     },
     "include":[
         "."
