--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "dist",
     "install"
   ],
-  "engines" : { 
-    "node" : ">=20.15",
-    "npm" : ">=10.7"
-  },  
+  "engines": {
+    "node": ">=20.15",
+    "npm": ">=10.7"
+  },
   "dependencies": {
-    "backend-plus": "^2.1.4",
+    "backend-plus": "^2.1.6",
     "frontend-plus": "^0.0.9",
     "guarantee-type": "^0.2.2",
     "json4all": "^1.4.0",
+    "pg-triggers": "^0.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "pg-triggers": "^0.3.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -31,8 +31,8 @@
     "mixin-patch": "^0.4.1",
     "mocha": "^11.1.0",
     "type-fest": "4.33.0",
-    "typescript": "^5.7.3",
-    "types.d.ts": "^0.6.22"
+    "types.d.ts": "^0.6.22",
+    "typescript": "^5.7.3"
   },
   "mixin-patch": {
     "patch": false
