primer intento de conectar frontend-plus alpha con @fernquiros

--- a/package.json
+++ b/package.json
@@ -15,19 +15,33 @@
     "npm": ">=10.7"
   },
   "dependencies": {
-    "backend-plus": "^2.1.7",
-    "frontend-plus": "^0.0.12",
+    "backend-plus": "^2.1.8",
+    "frontend-plus": "^1.0.3-alpha.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/lab": "^6.0.0-beta.19",
+    "@mui/material": "^6.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "guarantee-type": "^0.2.2",
     "json4all": "^1.4.0",
-    "pg-triggers": "^0.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "pg-triggers": "^0.3.3"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.13.4",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "babel-loader": "^9.2.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.4",
     "mixin-patch": "^0.4.1",
     "mocha": "^11.1.0",
     "type-fest": "4.34.1",
@@ -38,9 +52,9 @@
     "patch": false
   },
   "scripts": {
-    "prepare": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json && tsc -p tsconfig-unlogged.json && mixin-patch",
-    "build-ignore-error": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\") && (tsc -p tsconfig-unlogged.json || echo \"continue w/error\") && mixin-patch",
-    "build-cli": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-unlogged.json || echo \"continue w/error\") && mixin-patch",
+    "prepare": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json && tsc -p tsconfig-unlogged.json && mixin-patch && npx webpack",
+    "build-ignore-error": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\") && (tsc -p tsconfig-unlogged.json || echo \"continue w/error\") && mixin-patch && npx webpack",
+    "build-cli": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-unlogged.json || echo \"continue w/error\") && mixin-patch  && npx webpack",
     "watch:buildC": "tsc -p tsconfig-client.json --watch",
     "watch:buildS": "tsc -p tsconfig-server.json --watch",
     "watch:buildU": "tsc -p tsconfig-unlogged.json --watch",
