Agrego un seguro en test.only-in-db para que no se modifique cualquier db en los tests

--- a/example-local-config.yaml
+++ b/example-local-config.yaml
@@ -14,6 +14,8 @@ install:
     drop-his: false # poner en true en desarrollo
     db:
       owner: siper_owner
+tests:
+  only-in-db: siper_local_test_db
 client-setup: 
   lang: es
 devel: # no incluir en producción. En desarrollo quitar la x-
