--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "source-map-support": "^0.5.21",
     "type-fest": "4.41.0",
     "types.d.ts": "^0.6.22",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "@types/fs-extra": "^11.0.4"
   },
   "mixin-patch": {
     "patch": false
