1. Restauro los tests. 2. Cambio el control de sectors circulares por sectores desnivelados (o sea uso el nivel) 3. Corrijo el cálculo de sector para que no remueva caracteres si hubiera de más 4. Quito situación de revista 5. Mejoro los tests para que se vea el stack-trace de ts en vez de js.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm": ">=10.7"
   },
   "dependencies": {
-    "backend-plus": "^2.2.9",
+    "backend-plus": "^2.5.0-betha.0",
     "frontend-plus": "^0.0.12",
     "guarantee-type": "^0.2.2",
     "json4all": "^1.4.0",
@@ -29,8 +29,9 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "mixin-patch": "^0.4.1",
-    "mocha": "^11.1.0",
-    "type-fest": "4.39.1",
+    "mocha": "^11.5.0",
+    "source-map-support": "^0.5.21",
+    "type-fest": "4.41.0",
     "types.d.ts": "^0.6.22",
     "typescript": "^5.8.3"
   },
@@ -45,7 +46,7 @@
     "watch:buildC": "tsc -p tsconfig-client.json --watch",
     "watch:buildS": "tsc -p tsconfig-server.json --watch",
     "watch:buildU": "tsc -p tsconfig-unlogged.json --watch",
-    "test": "tsc -p tsconfig-test.json && mocha --reporter spec --bail --check-leaks dist/test/test/",
+    "test": "tsc -p tsconfig-test.json && mocha -r ./src/test/setup.js --reporter spec --bail --check-leaks dist/test/test/",
     "test-directo": "mocha --reporter spec --bail --check-leaks dist/test/test/",
     "dump": "npm start -- --dump-db",
     "dumpb": "(tsc -p tsconfig-server.json  || echo \"continue w/error\") && npm run dump",
