--- a/example-local-config.yaml
+++ b/example-local-config.yaml
@@ -14,7 +14,7 @@ install:
     drop-his: false # poner en true en desarrollo
     db:
       owner: siper_owner
-tests:
+test:
   only-in-db: siper_local_test_db
 client-setup: 
   lang: es
