--- a/example-local-config.yaml
+++ b/example-local-config.yaml
@@ -25,3 +25,7 @@ devel: # no incluir en producción. En desarrollo quitar la x-
 log:
   db:
     on-demand: true
+mixin-patch:
+  copy:
+  - from: ../siper-data/grafica
+    to: ./dist    
