--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "backend-plus": "^2.5.2-betha.29",
+    "best-globals": "^2.0.2",
     "frontend-plus": "^0.0.16",
     "guarantee-type": "^0.2.2",
     "json4all": "^1.4.0",
