Agrego eslint para detectar promesas no esperadas.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.9.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
     "mixin-patch": "^0.5.0",
     "mocha": "^11.7.4",
     "serial-tester": "^0.2.0",
@@ -36,7 +42,7 @@
     "type-fest": "5.1.0",
     "types.d.ts": "^0.6.22",
     "typescript": "^5.9.3",
-    "@types/fs-extra": "^11.0.4"
+    "typescript-eslint": "^8.46.4"
   },
   "mixin-patch": {
     "patch": false
