--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.5.1",
+  "version": "0.6.0-alfa.1",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -25,13 +25,13 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
+    "@eslint/js": "^9.39.2",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
@@ -39,10 +39,10 @@
     "mocha": "^11.7.5",
     "serial-tester": "^0.2.0",
     "source-map-support": "^0.5.21",
-    "type-fest": "5.3.0",
+    "type-fest": "5.3.1",
     "types.d.ts": "^0.6.22",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.1"
+    "typescript-eslint": "^8.50.0"
   },
   "mixin-patch": {
     "patch": false
