--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.6.0-alfa.1",
+  "version": "0.6.0-alfa.2",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -15,7 +15,7 @@
     "npm": ">=10.9"
   },
   "dependencies": {
-    "backend-plus": "^2.5.2-betha.31",
+    "backend-plus": "^2.5.2-betha.32",
     "best-globals": "^2.0.2",
     "frontend-plus": "^0.0.16",
     "guarantee-type": "^0.2.2",
@@ -28,7 +28,7 @@
     "@eslint/js": "^9.39.2",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^25.0.2",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.39.2",
@@ -37,7 +37,7 @@
     "jiti": "^2.6.1",
     "mixin-patch": "^0.5.0",
     "mocha": "^11.7.5",
-    "serial-tester": "^0.2.0",
+    "serial-tester": "^0.3.0-beta.0",
     "source-map-support": "^0.5.21",
     "type-fest": "5.3.1",
     "types.d.ts": "^0.6.22",
