--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.5.1-fix",
+  "version": "0.5.2",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
