--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siper",
-  "version": "0.6.0-alfa.2",
+  "version": "0.6.0-beta.1",
   "private": true,
   "license": "MIT",
   "description": "Sistema Integral de Gestión de Agentes, Recursos, Personal y Actividades",
@@ -15,7 +15,7 @@
     "npm": ">=10.9"
   },
   "dependencies": {
-    "backend-plus": "^2.5.2-betha.32",
+    "backend-plus": "^2.5.2-betha.40",
     "best-globals": "^2.0.2",
     "frontend-plus": "^0.0.16",
     "guarantee-type": "^0.2.2",
@@ -28,21 +28,21 @@
     "@eslint/js": "^9.39.2",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.5.0",
+    "globals": "^17.0.0",
     "jiti": "^2.6.1",
     "mixin-patch": "^0.5.0",
     "mocha": "^11.7.5",
-    "serial-tester": "^0.3.0-beta.0",
+    "serial-tester": "^0.3.0-rc.2",
     "source-map-support": "^0.5.21",
     "type-fest": "5.3.1",
     "types.d.ts": "^0.6.22",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0"
+    "typescript-eslint": "^8.52.0"
   },
   "mixin-patch": {
     "patch": false
