--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "watch:buildC": "tsc -p tsconfig-client.json --watch",
     "watch:buildS": "tsc -p tsconfig-server.json --watch",
     "watch:buildU": "tsc -p tsconfig-unlogged.json --watch",
-    "test": "tsc -p tsconfig-test.json && mocha -r ./src/test/setup.js --reporter spec --bail --check-leaks dist/test/test/",
+    "test": "tsc -p tsconfig-test.json && mocha -r ./src/test/setup.js --reporter spec --check-leaks dist/test/test/",
     "test-directo": "mocha --reporter spec --bail --check-leaks dist/test/test/",
     "dump": "npm start -- --dump-db",
     "dumpb": "(tsc -p tsconfig-server.json  || echo \"continue w/error\") && npm run dump",
